# restaurant-recommend-agent

./: .env.example  .gitignore  AGENTS.md  README.md  deploy.sh  docker-compose.yml  nginx.conf  opencode.json  opencode.jsonc  start-all.ps1  用例图.drawio  系统功能框图.drawio  系统功能结构图.drawio
agent-web/: README.md  index.html  package-lock.json  package.json  start-dev.ps1  tsconfig.json  vite.config.ts
mymenu-main/: app.js  app.json  app.wxss  (+4 more)
recommend-agent/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
recommend-agent/app/: main.py
recommend-agent/app/agents/: restaurant_graph.py  state.py
recommend-agent/app/agents/nodes/: compose_node.py  constraint_node.py  context_node.py  dish_rank_node.py  intent_node.py  nearby_restaurant_node.py  pairing_node.py  rag_node.py  restaurant_node.py
recommend-agent/app/agents/tools/: place_search.py
recommend-agent/app/api/: router.py  routes_recommend.py
recommend-agent/app/core/: config.py
recommend-agent/app/schemas/: recommend.py
recommend-agent/app/services/: dify_llm_bridge.py  dify_service.py  local_knowledge_service.py  multi_agent_recommend_service.py  ordering_client.py
recommend-agent/docs/: API_USAGE.md  DIFY.md  FIX_502_DIFY_MODEL.md  NEARBY_AND_DISHES.md  SCHEME_A.md  SETUP_INTEGRATIONS.md  dify-integration.md
recommend-agent/integrations/: recommend_agent_client.js
recommend-agent/knowledge_base/: README.md  allergy_and_emergency_dining.md  city_food_guide.md  common_dining_qa.md  dining_safety_rules.md  restaurant_faq.md
recommend-agent/scripts/: check_integrations.py
(+71 files in other folders)
